<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/i_1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:ems="10"
        android:hint="@string/n"
        android:inputType="textPersonName"
        android:textColorHint="#555252"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="186dp"
        android:ems="10"
        android:hint="@string/p"
        android:inputType="text"
        android:textColor="#FFFAFA"
        android:textColorHint="#605e5e" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="212dp"
        android:ems="10"
        android:hint="@string/e"
        android:inputType="textEmailAddress"
        android:textColor="#FFFAFA"
        android:textColorHint="#605e5e" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:ems="10"
        android:hint="@string/c"
        android:inputType="number"
        android:textColor="#FFFAFA"
        android:textColorHint="#605e5e" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:background="#000000"
        android:text="@string/S"
        android:textColor="#FC8EAC" />
</RelativeLayout>