<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAFA"
    tools:context=".Main8Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="270dp"
                android:layout_height="177dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/w2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:text="@string/wd"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="184dp"
                android:layout_height="254dp"
                android:layout_below="@+id/textView"
                app:srcCompat="@drawable/w6" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="149dp"
                android:layout_height="199dp"
                android:layout_below="@+id/textView"
                android:layout_toEndOf="@+id/imageView4"
                app:srcCompat="@drawable/w7" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView4"
                android:text="@string/wr"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="218dp"
                android:layout_height="294dp"
                android:layout_below="@+id/textView2"
                app:srcCompat="@drawable/w4" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView5"
                android:text="@string/Wa"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:gravity="end"
                android:text="@string/wt"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/i1"
                android:layout_width="283dp"
                android:layout_height="325dp"
                android:layout_below="@+id/textView4"
                app:srcCompat="@drawable/w3" />


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:text="NEXT"
                android:layout_below="@+id/i1"
                android:textColor="#E75480"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>