<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAFA"
    tools:context=".Main6Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="199dp"
                android:layout_height="282dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/tarf" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="186dp"
                android:layout_height="172dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/tar1" />


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="187dp"
                android:layout_height="124dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/imageView3"
                app:srcCompat="@drawable/sr1" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="264dp"
                android:layout_height="176dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/imageView5"
                android:layout_marginTop="-2dp"
                app:srcCompat="@drawable/sr2" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:background="#FFFAFA"
                android:rating="4.3" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView6"
                android:text="@string/ADes"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:text="@string/SD"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView7"
                android:text="@string/sa"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tariff - INR 10000 per day"
                android:layout_below="@+id/textView3"
                android:textColor="#000000"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_below="@+id/textView2"
                app:srcCompat="@drawable/b2" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/textView2"
                android:layout_toEndOf="@+id/imageView2"
                app:srcCompat="@drawable/b1" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                app:srcCompat="@drawable/sr3"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NEXT"
                android:layout_below="@+id/imageView10"
                android:background="#000000"
                android:textColor="#E75480"
                android:textAlignment="center"/>


        </RelativeLayout>

    </ScrollView>



</RelativeLayout>